Version Changes for Hypermail

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 Jose Kahan (jose@w3.org) (September 26, 2002)
  Cleaned the autoconf files for passing the libnvf compile parameters
  (what a difference does reading the manual make).

 Jose Kahan (jose@w3.org) (September 25, 2002)
  Commited the ~/hypermail/ltmain.sh file and also put it in the
  FILES section. Somehow, without this file, it was impossible to
  compile the file generated thru a make tgz. The same kind of
  file already existed in the pcre and fnv directories.
  Added a rule to pass the FNV optional CFLAGS from the 
  ~/hypermail/Makefile file, so that you can do a make from the top-level
  (previously, you had to do it in the src directory... oops!).

 Jose Kahan (jose@w3.org) (September 25, 2002)
  Updated the FILES tgz file (added libfnv, removed two non-existent
  tests).
  Fixed the make tgz rule (how long was it since it was last used?)

 Jose Kahan (jose@w3.org) (September 25, 2002)
  Added a new option to compute the archived filenames using an fnv hash
  of the msgid + received From date. The resulting filename is 8 bytes long
  (a space of 2^32 bits) + the extension. You can eventually change it to
  16 bytes if this is too short. Just look at the code. 
  The advantage of this is that you can add and remove items from the
  archive and not worry anymore about broken links if the sequence
  changes (e.g., if you are rebuilding an archive). To activate this
  option, you need to do a ./ configure --enable-libfnv, then 
  recompile hypermail. The name of the new  option is nonsequential
  (lack of imagination!). 

 Peter McCluskey (September 17, 2002)
  Added reverse_folders option.

 Peter McCluskey (August 30, 2002)
  Fix segfaults in mdecodeRFC2047 (with headers encoded as quoted printable),
  and in ConvURLsString.
  Add files_by_thread option.

 Peter McCluskey (August 20, 2002)
  Change preferedcontent to fall back on type "text/" or on encoding if
  it can't find any prefered types.